
[package]
name = "iptrap"
version = "1.0.9"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A fast, stateless TCP sinkhole"
license = "ISC"
homepage = "https://github.com/jedisct1/iptrap"
repository = "https://github.com/jedisct1/iptrap"
categories = ["command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
zmq = "0.10.0"
coarsetime = "0.1.36"
serde = "1.0.228"
serde_json = "1.0.148"
rand = "0.9.2"
libc = "0.2.178"
log = "0.4.29"
siphasher = "1.0.1"

[lib]
name = "iptrap"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
